...
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnFind"
        android:background="@color/colorTextIcons"
        android:hint="Enter Zip Code"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/etTerm"
...
